--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -104,6 +104,7 @@ $indexItemWidth: 200px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding-left: 20px;
 }
 
 .team-select-icon {
